--- a/vignettes/ChineseVersion_Procedure.html
+++ b/vignettes/ChineseVersion_Procedure.html
@@ -13,7 +13,7 @@
 <meta name="author" content="Hsiang-Ju, Chiu" />
 
 
-<title>ChineseVersion_Procedure</title>
+<title>Chinese Version-Procedure: Get Started</title>
 
 
 
@@ -29,7 +29,7 @@
 
 
 
-<h1 class="title toc-ignore">ChineseVersion_Procedure</h1>
+<h1 class="title toc-ignore">Chinese Version-Procedure: Get Started</h1>
 <h4 class="author"><em>Hsiang-Ju, Chiu</em></h4>
 
 
@@ -41,14 +41,34 @@
 <h3>產生 ICD-9-PCS 的兩種格式的表格: Decimal 和 Short</h3>
 <p>供後續 ICD 格式轉換的功能使用 (<code>convertIcdPrDecimaltoShort 和 convertIcdPrShortToDecimal</code>)</p>
 <p>ICD-9-PCS</p>
-<pre><code>icd9 &lt;- ccsDxICD9$ICD
-ICD_9_CM_withTwoFormat &lt;- ICD9DxGenerateDecimalFormat(icd9)
+<pre><code>icd9 &lt;- ccsPrICD9$ICD
+ICD9PrwithTwoFormat &lt;- ICD9PrGenerateDecimalFormat(icd9)
 
-icd9_Short &lt;- ICD_9_CM_withTwoFormat$Short[1:10]
+icd9_Short &lt;- ICD9PrwithTwoFormat$Short[1:10]
 # c(&quot;E9500&quot;, &quot;E9501&quot;, &quot;E9502&quot;, &quot;E9503&quot;, &quot;E9504&quot;, &quot;E9505&quot;, &quot;E9506&quot;, &quot;E9507&quot;, &quot;E9508&quot;, &quot;E9509&quot;)
-icd9_Decimal &lt;- ICD_9_CM_withTwoFormat$Decimal[1:10]
+icd9_Decimal &lt;- ICD9PrwithTwoFormat$Decimal[1:10]
 # c(&quot;E950.0&quot;, &quot;E950.1&quot;, &quot;E950.2&quot;, &quot;E950.3&quot;, &quot;E950.4&quot;, &quot;E950.5&quot;, &quot;E950.6&quot;, &quot;E950.7&quot;, &quot;E950.8&quot;, &quot;E950.9&quot;)</code></pre>
 <p>ICD-10-PCS只有short的格式</p>
+</div>
+<div id="icd-9-pcs-and-icd-10-pcs-code--short---decimal" class="section level3">
+<h3>ICD-9-PCS and ICD-10-PCS code 兩種格式的轉換: Short &lt;-&gt; Decimal</h3>
+<p>進行後續分組功能之前, 根據使用者使用的 ICD 格式進行格式的統一化, 分別兩種功能可以將 ICD 統一轉換為 Short 或 Decimal 的格式</p>
+<p>將 ICD-PCS code 的格式統一由 Short 轉成 Decimal</p>
+<pre><code># ICD-9
+convertIcdPrShortToDecimal(icd9_Short)$Decimal
+# c(&quot;E950.0&quot;, &quot;E950.1&quot;, &quot;E950.2&quot;, &quot;E950.3&quot;, &quot;E950.4&quot;, &quot;E950.5&quot;, &quot;E950.6&quot;, &quot;E950.7&quot;, &quot;E950.8&quot;, &quot;E950.9&quot;)
+
+# ICD-10
+convertIcdPrShortToDecimal(icd10_Short)$Decimal
+# c(&quot;A15.0&quot;, &quot;A15.4&quot;, &quot;A15.5&quot;, &quot;A15.6&quot;, &quot;A15.7&quot;, &quot;A15.8&quot;, &quot;A15.9&quot;, &quot;A17.0&quot;, &quot;A17.1&quot;, &quot;A17.81&quot;)</code></pre>
+<p>將 ICD-PCS code 的格式統一由 Decimal 轉成 Short</p>
+<pre><code># ICD-9
+convertIcdPrDecimaltoShort(icd9_Decimal)$Short
+# c(&quot;E9500&quot;, &quot;E9501&quot;, &quot;E9502&quot;, &quot;E9503&quot;, &quot;E9504&quot;, &quot;E9505&quot;, &quot;E9506&quot;, &quot;E9507&quot;, &quot;E9508&quot;, &quot;E9509&quot;)
+
+# ICD-10
+convertIcdPrDecimaltoShort(icd10_Decimal)$Short
+# c(&quot;A150&quot;, &quot;A154&quot;, &quot;A155&quot;, &quot;A156&quot;, &quot;A157&quot;, &quot;A158&quot;, &quot;A159&quot;, &quot;A170&quot;, &quot;A171&quot;, &quot;A1781&quot;)</code></pre>
 </div>
 </div>
 
