--- a/vignettes/ChineseVersion_Procedure.html
+++ b/vignettes/ChineseVersion_Procedure.html
@@ -34,11 +34,12 @@
 
 
 
-<div id="-" class="section level1">
-<h1>簡介-檢查與處置錢處理與整合方法</h1>
+<div class="section level1">
+<h1>檢查與處置錢處理與整合方法</h1>
 <pre><code>cat(utils::packageDescription(&quot;emr&quot;)$Description)</code></pre>
-<div id="-icd-9-pcs--decimal--short" class="section level3">
-<h3>產生 ICD-9-PCS 的兩種格式的表格: Decimal 和 Short</h3>
+<div id="icd-pcs-code-" class="section level3">
+<h3>ICD-PCS-CODE 格式對照</h3>
+<p>產生 ICD-9-PCS 的兩種格式的表格: Decimal 和 Short</p>
 <p>供後續 ICD 格式轉換的功能使用 (<code>IcdPrDecimaltoShort 和 IcdPrShortToDecimal</code>)</p>
 <p>ICD-9-PCS</p>
 <pre><code>icd9 &lt;- ccsPrICD9$ICD
@@ -52,10 +53,11 @@ icd9_Decimal &lt;- ICD9PrwithTwoFormat$Decimal[1:10]
 <pre><code>icd10 &lt;- ccsPrICD10$ICD[1:10]
 # c(&quot;00800ZZ&quot;, &quot;00803ZZ&quot;, &quot;00804ZZ&quot;, &quot;00870ZZ&quot;, &quot;00873ZZ&quot;, &quot;00874ZZ&quot;, &quot;00880ZZ&quot;, &quot;00883ZZ&quot;, &quot;00884ZZ&quot;, &quot;008F0ZZ&quot;)</code></pre>
 </div>
-<div id="icd-9-pcs--short---decimal" class="section level3">
-<h3>ICD-9-PCS 兩種格式的轉換: Short &lt;-&gt; Decimal</h3>
+<div id="icd-pcs-code-" class="section level3">
+<h3>ICD-PCS code 格式轉換</h3>
+<p>ICD-9-PCS 兩種格式的轉換: Short &lt;-&gt; Decimal</p>
 <p>進行後續分組功能之前, 根據使用者使用的 ICD 格式進行格式的統一化, 分別兩種功能可以將 ICD 統一轉換為 Short 或 Decimal 的格式</p>
-<p>將 ICD-PCS code 的格式統一由 Short 轉成 Decimal</p>
+<p>將 ICD-PCS code 的格式統一轉成 Decimal</p>
 <pre><code># ICD-9
 IcdPrShortToDecimal(icd9_Short)$Decimal
 # c(&quot;01.01&quot;, &quot;01.09&quot;, &quot;01.21&quot;, &quot;01.22&quot;, &quot;01.23&quot;, &quot;01.24&quot;, &quot;01.25&quot;, &quot;01.26&quot;, &quot;01.27&quot;, &quot;01.28&quot;)
@@ -63,7 +65,7 @@ IcdPrShortToDecimal(icd9_Short)$Decimal
 # ICD-10
 IcdPrShortToDecimal(icd10)$Decimal
 # c(&quot;00800ZZ&quot;, &quot;00803ZZ&quot;, &quot;00804ZZ&quot;, &quot;00870ZZ&quot;, &quot;00873ZZ&quot;, &quot;00874ZZ&quot;, &quot;00880ZZ&quot;, &quot;00883ZZ&quot;, &quot;00884ZZ&quot;, &quot;008F0ZZ&quot;)</code></pre>
-<p>將 ICD-PCS code 的格式統一由 Decimal 轉成 Short</p>
+<p>將 ICD-PCS code 的格式統一轉成 Short</p>
 <pre><code># ICD-9
 IcdPrDecimaltoShort(icd9_Decimal)$Short
 # c(&quot;0101&quot;, &quot;0109&quot;, &quot;0121&quot;, &quot;0122&quot;, &quot;0123&quot;, &quot;0124&quot;, &quot;0125&quot;, &quot;0126&quot;, &quot;0127&quot;, &quot;0128&quot;)
@@ -72,18 +74,19 @@ IcdPrDecimaltoShort(icd9_Decimal)$Short
 IcdPrShortToDecimal(icd10)$Decimal
 # c(&quot;00800ZZ&quot;, &quot;00803ZZ&quot;, &quot;00804ZZ&quot;, &quot;00870ZZ&quot;, &quot;00873ZZ&quot;, &quot;00874ZZ&quot;, &quot;00880ZZ&quot;, &quot;00883ZZ&quot;, &quot;00884ZZ&quot;, &quot;008F0ZZ&quot;)</code></pre>
 </div>
-<div id="-icd-9--icd-10-code-" class="section level2">
-<h2>將 ICD-9 及 ICD-10 code 依照不同的分類標準分類…</h2>
-<p>將分散的 ICD-9-PCS 及 ICD-10-PCS 的診斷碼依照其臨床上意義相似的歸併整合為較大的群組, 標準化的分類以便於後續的整合統計分析使用</p>
-<div id="-clinical-classifications-software-ccs" class="section level3">
-<h3>臨床分類軟體 (Clinical Classifications Software, CCS)</h3>
-<p>係以美國醫療照護政策研究品質局（AHRQ）為提供健康政策研究而所發展之「臨床分類軟體」。 CCS 分為單一階層及多階層的分群, 其階層是診斷分類可依使用需求調整分類標準</p>
+<div id="icd-pcs-code-" class="section level2">
+<h2>ICD-PCS-code 整合分類</h2>
+<p>將 ICD-9 及 ICD-10 code 依照不同的分類標準分類: 分散的 ICD-9-PCS 及 ICD-10-PCS 的診斷碼依照其臨床上意義相似的歸併整合為較大的群組, 標準化的分類以便於後續的整合統計分析使用</p>
+<p>目前分類標準: CCS及 Procedure Class, 以下將分別介紹之</p>
+<div class="section level3">
+<h3>一、臨床分類軟體</h3>
+<p>係以美國醫療照護政策研究品質局（AHRQ）為提供健康政策研究而所發展之「臨床分類軟體」(Clinical Classifications Software, CCS)。 CCS 分為單一階層及多階層的分群, 其階層是診斷分類可依使用需求調整分類標準</p>
 <p>單一階層: 較通用的分類</p>
 <p>多階層: 將診斷碼分為較精確的分組</p>
-<p>目前 ICD-9-PCS 的 CCS 版本為 2015 , ICD-10-PCS 的 CCS 版本為 2018</p>
-<div id="-ccs-category" class="section level4">
-<h4>單一階層分類 (CCS Category)</h4>
-<p><code>IcdPrToCCS</code> 可取得 ICD-9-PCS 及 ICD-10-PCS 相對應的 CCS 分類及分類之敘述</p>
+<p>目前 ICD-9-PCS 的 CCS 版本為 2015 , ICD-10-PCS 的 CCS 版本為 2019</p>
+<div class="section level4">
+<h4>1) 單一階層分類</h4>
+<p><code>IcdPrToCCS</code> 可取得 ICD-9-PCS 及 ICD-10-PCS 相對應的 CCS 分類(CCS Category)及分類之敘述</p>
 <p>ICD-9-PCS 和 ICD-10-PCS 的ccs單一階層一致: 共231種</p>
 <pre><code>## ICD to CCS category
 IcdPrToCCS (PrDataFile, ID, ICD, Date, &quot;2016-01-01&quot;, FALSE)
@@ -94,9 +97,9 @@ IcdPrToCCS (PrDataFile, ID, ICD, Date, &quot;2016-01-01&quot;, TRUE)
 # &quot;Incision and excision of CNS&quot;             &quot;Other CT scan&quot;                
 # &quot;Incision and excision of CNS&quot;             &quot;Incision and excision of CNS&quot;</code></pre>
 </div>
-<div id="-multiple-ccs-level" class="section level4">
-<h4>多階層分類 (Multiple ccs level)</h4>
-<p><code>IcdPrToCCSLvl</code> 可取得 ICD-9-PCS 及 ICD-10-PCS 相對應的 CCS 多階層分類及分類之敘述</p>
+<div class="section level4">
+<h4>2) 多階層分類</h4>
+<p><code>IcdPrToCCSLvl</code> 可取得 ICD-9-PCS 及 ICD-10-PCS 相對應的 CCS 多階層分類 (Multiple ccs level)及分類之敘述</p>
 <p>ICD-9-PCS 共 3個階層 (Level 1~3)</p>
 <p>ICD-10-PCS 共 2個階層 (Level 1~2)</p>
 <pre><code>## ICD to CCS multiple level 1
@@ -110,7 +113,7 @@ IcdPrToCCSLvl(PrDataFile, ID, ICD, Date, &quot;2016-01-01&quot;, 2, TRUE)
 </div>
 </div>
 <div id="procedure-class" class="section level3">
-<h3>Procedure Class</h3>
+<h3>二、Procedure Class</h3>
 <p>由美國醫療照護政策研究品質局（AHRQ）提供的HCUP Classes, 將檢查與處置碼基於其特性分組, 共ICD-PCS code分為下列四個組別:</p>
 <p>1.Minor Diagnostic: 非手術室執行之診斷類處置</p>
 <p>2.Minor Therapeutic: 非手術室執行之治療類處置</p>
@@ -120,9 +123,8 @@ IcdPrToCCSLvl(PrDataFile, ID, ICD, Date, &quot;2016-01-01&quot;, 2, TRUE)
 # &quot;2&quot; &quot;1&quot; &quot;4&quot; &quot;4&quot;</code></pre>
 </div>
 </div>
-</div>
-<div id="reference" class="section level1">
-<h1>Reference</h1>
+<div class="section level2">
+<h2>參考資料</h2>
 <div id="icd--short--decimal" class="section level3">
 <h3>ICD 格式: Short 和 Decimal</h3>
 <p><a href="https://www.findacode.com/search/search.php" class="uri">https://www.findacode.com/search/search.php</a></p>
@@ -133,15 +135,17 @@ IcdPrToCCSLvl(PrDataFile, ID, ICD, Date, &quot;2016-01-01&quot;, 2, TRUE)
 <p><a href="https://www.findacode.com/search/search.php" class="uri">https://www.findacode.com/search/search.php</a></p>
 <p><a href="https://www.cms.gov/Medicare/Quality-Initiatives-Patient-Assessment-Instruments/HospitalQualityInits/Downloads/HospitalAppendix_F.pdf" class="uri">https://www.cms.gov/Medicare/Quality-Initiatives-Patient-Assessment-Instruments/HospitalQualityInits/Downloads/HospitalAppendix_F.pdf</a></p>
 </div>
-<div id="-clinical-classifications-software-ccs-1" class="section level3">
+<div id="-clinical-classifications-software-ccs" class="section level3">
 <h3>臨床分類軟體 (Clinical Classifications Software, CCS)</h3>
-<p>ICD-9-PCS CCS (2015): <a href="https://www.hcup-us.ahrq.gov/toolssoftware/procedure/pc2015.csv" class="uri">https://www.hcup-us.ahrq.gov/toolssoftware/procedure/pc2015.csv</a></p>
-<p>ICD-10-PCS CCS (2018): <a href="https://www.hcup-us.ahrq.gov/toolssoftware/procedureicd10/procedure_icd10.jsp" class="uri">https://www.hcup-us.ahrq.gov/toolssoftware/procedureicd10/procedure_icd10.jsp</a></p>
+<p>ICD-9-PCS CCS (2015): <a href="https://www.hcup-us.ahrq.gov/toolssoftware/ccs/Single_Level_CCS_2015.zip" class="uri">https://www.hcup-us.ahrq.gov/toolssoftware/ccs/Single_Level_CCS_2015.zip</a></p>
+<p><a href="https://www.hcup-us.ahrq.gov/toolssoftware/ccs/Multi_Level_CCS_2015.zip" class="uri">https://www.hcup-us.ahrq.gov/toolssoftware/ccs/Multi_Level_CCS_2015.zip</a></p>
+<p>ICD-10-PCS CCS (2019): <a href="https://www.hcup-us.ahrq.gov/toolssoftware/procedureicd10/procedure_icd10.jsp" class="uri">https://www.hcup-us.ahrq.gov/toolssoftware/procedureicd10/procedure_icd10.jsp</a></p>
 </div>
 <div id="procedure-class-1" class="section level3">
 <h3>Procedure Class</h3>
 <p>ICD-9-Procedure Class (2015): <a href="https://www.hcup-us.ahrq.gov/toolssoftware/procedure/pc2015.csv" class="uri">https://www.hcup-us.ahrq.gov/toolssoftware/procedure/pc2015.csv</a></p>
-<p>ICD-10-Procedure Class (2018): <a href="https://www.hcup-us.ahrq.gov/toolssoftware/procedureicd10/procedure_icd10.jsp" class="uri">https://www.hcup-us.ahrq.gov/toolssoftware/procedureicd10/procedure_icd10.jsp</a></p>
+<p>ICD-10-Procedure Class (2019): <a href="https://www.hcup-us.ahrq.gov/toolssoftware/procedureicd10/procedure_icd10.jsp" class="uri">https://www.hcup-us.ahrq.gov/toolssoftware/procedureicd10/procedure_icd10.jsp</a></p>
+</div>
 </div>
 </div>
 
