--- a/vignettes/ChineseVersion_Procedure.html
+++ b/vignettes/ChineseVersion_Procedure.html
@@ -67,11 +67,11 @@ IcdPrShortToDecimal(icd10)$Decimal
 # c(&quot;00800ZZ&quot;, &quot;00803ZZ&quot;, &quot;00804ZZ&quot;, &quot;00870ZZ&quot;, &quot;00873ZZ&quot;, &quot;00874ZZ&quot;, &quot;00880ZZ&quot;, &quot;00883ZZ&quot;, &quot;00884ZZ&quot;, &quot;008F0ZZ&quot;)</code></pre>
 <p>將 ICD-PCS code 的格式統一轉成 Short</p>
 <pre><code># ICD-9
-IcdPrDecimaltoShort(icd9_Decimal)$Short
+IcdPrDecimalToShort(icd9_Decimal)$Short
 # c(&quot;0101&quot;, &quot;0109&quot;, &quot;0121&quot;, &quot;0122&quot;, &quot;0123&quot;, &quot;0124&quot;, &quot;0125&quot;, &quot;0126&quot;, &quot;0127&quot;, &quot;0128&quot;)
 
 # ICD-10
-IcdPrShortToDecimal(icd10)$Decimal
+IcdPrDecimalToShort(icd10)$Decimal
 # c(&quot;00800ZZ&quot;, &quot;00803ZZ&quot;, &quot;00804ZZ&quot;, &quot;00870ZZ&quot;, &quot;00873ZZ&quot;, &quot;00874ZZ&quot;, &quot;00880ZZ&quot;, &quot;00883ZZ&quot;, &quot;00884ZZ&quot;, &quot;008F0ZZ&quot;)</code></pre>
 </div>
 <div id="ii.-icd-pcs-code-" class="section level2">
@@ -127,6 +127,8 @@ IcdPrToCCSLvl(PrDataFile, ID, ICD, Date, &quot;2016-01-01&quot;, 2, TRUE)
 <h2>III. 參考資料</h2>
 <div id="icd--short--decimal" class="section level3">
 <h3>ICD 格式: Short 和 Decimal</h3>
+<p>ICD-9-PCS code (2014): <a href="https://www.cms.gov/Medicare/Coding/ICD9ProviderDiagnosticCodes/codes.html" class="uri">https://www.cms.gov/Medicare/Coding/ICD9ProviderDiagnosticCodes/codes.html</a></p>
+<p>ICD-10-PCS code (2019):<a href="https://www.cms.gov/Medicare/Coding/ICD10/2019-ICD-10-PCS.html" class="uri">https://www.cms.gov/Medicare/Coding/ICD10/2019-ICD-10-PCS.html</a></p>
 <p><a href="https://www.findacode.com/search/search.php" class="uri">https://www.findacode.com/search/search.php</a></p>
 <p><a href="https://www.cms.gov/Medicare/Quality-Initiatives-Patient-Assessment-Instruments/HospitalQualityInits/Downloads/HospitalAppendix_F.pdf" class="uri">https://www.cms.gov/Medicare/Quality-Initiatives-Patient-Assessment-Instruments/HospitalQualityInits/Downloads/HospitalAppendix_F.pdf</a></p>
 </div>
