--- a/vignettes/ChineseVersion_Diagnosis.html
+++ b/vignettes/ChineseVersion_Diagnosis.html
@@ -172,6 +172,15 @@ head(short)
 <p>123.45 (1)</p>
 <p>ICD版本錯誤: 共四種ICD (括號內為該ICD出現次數)</p>
 <p>c(“A01.05 (1)”, “E03.0 (1)”, “A0105 (1)”, “42761 (1)”)</p>
+<p>若想要看到全部的錯誤，可選擇list: Error，將顯示錯誤的ICD編碼、出現次數、在檔案中編碼被判斷為何種版本、錯誤的類別及建議該如何修正</p>
+<pre><code>IcdDxShortToDecimal(sampleDxFile,ICD,Date,&quot;2015/10/01&quot;)$Error
+
+#&gt;       ICD count IcdVersionInFile     WrongType Suggestion
+#&gt; 1: 123.45     1           ICD 10  Wrong format           
+#&gt; 2: A01.05     1            ICD 9 Wrong version           
+#&gt; 3:  E03.0     1            ICD 9 Wrong version           
+#&gt; 4:  A0105     1            ICD 9 Wrong version           
+#&gt; 5:  42761     1           ICD 10 Wrong version </code></pre>
 </div>
 <div id="ii.-icd-cm-code-" class="section level2">
 <h2>II. ICD-CM-code 標準化分組</h2>
