--- a/vignettes/ChineseVersion_Diagnosis.html
+++ b/vignettes/ChineseVersion_Diagnosis.html
@@ -398,7 +398,7 @@ head(AHRQ$groupedData_Long,5)
 #&gt; 5:  B  NeuroOther    2021-06-24  2021-06-24     1    0 days
 </code></pre>
 <p><strong>2) Charlson</strong></p>
-<p>Charlson database共病症測量指標的是基於Halfon和 Quan’s的版本, 使 ICD code 依其相關的共病症做分類</p>
+<p>Charlson database共病症測量指標的是基於Quan的Charlson Comorbidity Index版本, 使 ICD code 依其相關的共病症做分類</p>
 <p>ICD-9-CM 及 ICD-10-CM 的 Charlson 共病症種類一致, 共17種</p>
 <p>ICD-9</p>
 <pre><code># convert icd9_map_charlson (list) to icd9_charlson (data frame)
