--- a/vignettes/ChineseVersion_Procedure.html
+++ b/vignettes/ChineseVersion_Procedure.html
@@ -13,7 +13,7 @@
 <meta name="author" content="Hsiang-Ju, Chiu" />
 
 
-<title>Get Started: Chinese Version-Procedure</title>
+<title>Get Started: Procedure</title>
 
 
 
@@ -29,13 +29,13 @@
 
 
 
-<h1 class="title toc-ignore">Get Started: Chinese Version-Procedure</h1>
+<h1 class="title toc-ignore">Get Started: Procedure</h1>
 <h4 class="author"><em>Hsiang-Ju, Chiu</em></h4>
 
 
 
-<div id="i.-" class="section level1">
-<h1>I. 檢查與處置前處理與整合方法</h1>
+<div class="section level1">
+<h1>檢查與處置前處理與整合方法</h1>
 <pre><code>cat(utils::packageDescription(&quot;emr&quot;)$Description)</code></pre>
 <div id="icd-pcs-code-" class="section level3">
 <h3>ICD-PCS-CODE 格式對照</h3>
@@ -44,14 +44,14 @@
 <p>ICD-9-PCS</p>
 <pre><code>icd9_Short &lt;- head(ICD9PrwithTwoFormat$Short,10)
 # c(&quot;0001&quot;, &quot;0002&quot;, &quot;0003&quot;, &quot;0009&quot;, &quot;0010&quot;, &quot;0011&quot;, &quot;0012&quot;, &quot;0013&quot;, &quot;0014&quot;, &quot;0015&quot;)
-icd9_Decimal &lt;- head(ICD9PrwithTwoFormat$Decimal,10)
+icd9_Decimal &lt;- head(ICD9PrwithTwoFormat$Decimal, 10)
 # c(&quot;00.01&quot;, &quot;00.02&quot;, &quot;00.03&quot;, &quot;00.09&quot;, &quot;00.10&quot;, &quot;00.11&quot;, &quot;00.12&quot;, &quot;00.13&quot;, &quot;00.14&quot;, &quot;00.15&quot;)</code></pre>
 <p>ICD-10-PCS只有short的格式</p>
 <pre><code>icd10 &lt;- head(prICD10$ICD,10)
 # c(&quot;0016071&quot;, &quot;0016072&quot;, &quot;0016073&quot;, &quot;0016074&quot;, &quot;0016075&quot;, &quot;0016076&quot;, &quot;0016077&quot;, &quot;0016078&quot;, &quot;001607B&quot;, &quot;00160J0&quot;)</code></pre>
 </div>
-<div id="icd-pcs-code-" class="section level3">
-<h3>ICD-PCS code 格式轉換</h3>
+<div id="i.-code-standarization" class="section level2">
+<h2>I. Code standarization</h2>
 <p>ICD-9-PCS 兩種格式的轉換: Short &lt;-&gt; Decimal</p>
 <p>進行後續分組功能之前, 根據使用者使用的 ICD 格式進行格式的統一化, 分別兩種功能可以將 ICD 統一轉換為 Short 或 Decimal 的格式</p>
 <p>將 ICD-PCS code 的格式統一轉成 Decimal</p>
@@ -75,8 +75,8 @@ ICD10_Short &lt;- IcdPrDecimalToShort(icd10)
 ICD10_Short$Short
 # c(&quot;0016071&quot;, &quot;0016072&quot;, &quot;0016073&quot;, &quot;0016074&quot;, &quot;0016075&quot;, &quot;0016076&quot;, &quot;0016077&quot;, &quot;0016078&quot;, &quot;001607B&quot;, &quot;00160J0&quot;)</code></pre>
 </div>
-<div id="ii.-icd-pcs-code-" class="section level2">
-<h2>II. ICD-PCS-code 整合分類</h2>
+<div id="ii.-data-integration" class="section level2">
+<h2>II. Data integration</h2>
 <p>將 ICD-9 及 ICD-10 code 依照不同的分類標準分類: 分散的 ICD-9-PCS 及 ICD-10-PCS 的診斷碼依照其臨床上意義相似的歸併整合為較大的群組, 標準化的分類以便於後續的整合統計分析使用</p>
 <p>目前分類標準: CCS及 Procedure Class, 以下將分別介紹之</p>
 <div class="section level3">
@@ -124,28 +124,22 @@ IcdPrToCCSLvl(PrDataFile, ID, ICD, Date, &quot;2016-01-01&quot;, 2, TRUE)
 # &quot;2&quot; &quot;1&quot; &quot;4&quot; &quot;4&quot;</code></pre>
 </div>
 </div>
-<div id="iii.-" class="section level2">
-<h2>III. 參考資料</h2>
-<div id="icd--short--decimal" class="section level3">
-<h3>ICD 格式: Short 和 Decimal</h3>
+<div id="iii.-reference" class="section level2">
+<h2>III. Reference</h2>
+<div id="i.-code-standarization-1" class="section level3">
+<h3>I. Code standarization</h3>
 <p>ICD-9-PCS code (2014): <a href="https://www.cms.gov/Medicare/Coding/ICD9ProviderDiagnosticCodes/codes.html" class="uri">https://www.cms.gov/Medicare/Coding/ICD9ProviderDiagnosticCodes/codes.html</a></p>
 <p>ICD-10-PCS code (2019):<a href="https://www.cms.gov/Medicare/Coding/ICD10/2019-ICD-10-PCS.html" class="uri">https://www.cms.gov/Medicare/Coding/ICD10/2019-ICD-10-PCS.html</a></p>
 <p><a href="https://www.findacode.com/search/search.php" class="uri">https://www.findacode.com/search/search.php</a></p>
 <p><a href="https://www.cms.gov/Medicare/Quality-Initiatives-Patient-Assessment-Instruments/HospitalQualityInits/Downloads/HospitalAppendix_F.pdf" class="uri">https://www.cms.gov/Medicare/Quality-Initiatives-Patient-Assessment-Instruments/HospitalQualityInits/Downloads/HospitalAppendix_F.pdf</a></p>
 </div>
-<div id="icd--icdprdecimaltoshort--icdprshorttodecimal" class="section level3">
-<h3>ICD 格式轉換功能 (<code>IcdPrDecimaltoShort</code> 和 <code>IcdPrShortToDecimal</code>)</h3>
-<p><a href="https://www.findacode.com/search/search.php" class="uri">https://www.findacode.com/search/search.php</a></p>
-<p><a href="https://www.cms.gov/Medicare/Quality-Initiatives-Patient-Assessment-Instruments/HospitalQualityInits/Downloads/HospitalAppendix_F.pdf" class="uri">https://www.cms.gov/Medicare/Quality-Initiatives-Patient-Assessment-Instruments/HospitalQualityInits/Downloads/HospitalAppendix_F.pdf</a></p>
-</div>
-<div id="-clinical-classifications-software-ccs" class="section level3">
-<h3>臨床分類軟體 (Clinical Classifications Software, CCS)</h3>
+<div id="ii.-data-integration-1" class="section level3">
+<h3>II. Data integration</h3>
+<p><strong>臨床分類軟體 (Clinical Classifications Software, CCS)</strong></p>
 <p>ICD-9-PCS CCS (2015): <a href="https://www.hcup-us.ahrq.gov/toolssoftware/ccs/Single_Level_CCS_2015.zip" class="uri">https://www.hcup-us.ahrq.gov/toolssoftware/ccs/Single_Level_CCS_2015.zip</a></p>
 <p><a href="https://www.hcup-us.ahrq.gov/toolssoftware/ccs/Multi_Level_CCS_2015.zip" class="uri">https://www.hcup-us.ahrq.gov/toolssoftware/ccs/Multi_Level_CCS_2015.zip</a></p>
 <p>ICD-10-PCS CCS (2019): <a href="https://www.hcup-us.ahrq.gov/toolssoftware/procedureicd10/procedure_icd10.jsp" class="uri">https://www.hcup-us.ahrq.gov/toolssoftware/procedureicd10/procedure_icd10.jsp</a></p>
-</div>
-<div id="procedure-class-1" class="section level3">
-<h3>Procedure Class</h3>
+<p><strong>Procedure Class</strong></p>
 <p>ICD-9-Procedure Class (2015): <a href="https://www.hcup-us.ahrq.gov/toolssoftware/procedure/pc2015.csv" class="uri">https://www.hcup-us.ahrq.gov/toolssoftware/procedure/pc2015.csv</a></p>
 <p>ICD-10-Procedure Class (2019): <a href="https://www.hcup-us.ahrq.gov/toolssoftware/procedureicd10/procedure_icd10.jsp" class="uri">https://www.hcup-us.ahrq.gov/toolssoftware/procedureicd10/procedure_icd10.jsp</a></p>
 </div>
